# chimes_lsq

./: .gitignore  .swp  CMakeLists.txt  Makefile  NOTICE  README.md  README.txt  clone-all.sh  install.sh  make_docs.sh  uninstall.sh
.github/: pull_request_template.md
contrib/: combine_xyz_force.py  dftbgen_to_xyz.py  gen2xyz.py  vasp2xyzf.py
contrib/3b_force_check/: force_check_3body.pl
contrib/AL_driver/: README  build_docs.sh  cluster.py  config.py  dftbgen_to_xyz.py  example.config.py  gen_ff.py  gen_selections.py  helpers.py  main.py  post_process_molanal.py  restart.py  run_md.py  vasp_driver.py
contrib/Travis/: Makefile  README
contrib/cheby_refit/: FIT_PARAMS.sh  cheby_fitting.py
contrib/compare/: compare.pl  compare_A_mat.pl
contrib/hist_forces/: gen_hist.py  lsq-new-md-fmt-weighted.py
contrib/molanal/: Makefile  cpmdtogen.pl  gr_calc  lammpsxyztogen.pl  ma-kl  molanal-kl.c  pad
contrib/molanlal/: findmolecules.pl  fixgen.pl  gentoarc.pl  gr_calc  gr_calc.f90  lammpsfractogen.pl  molanal.new  molanal.pl  pad  skiphead.pl  splitmol.pl  tatb.md.out001
contrib/owlqn/: EULA.doc  README.txt  icmlpresentation.pptx
contrib/packmol/: LICENSE  Makefile  Makefile.default  README.md  ahestetic.f90  cenmass.f90  checkpoint.f90  comparegrad.f90  comprest.f90  compute_data.f90  computef.f90  computeg.f90  configure  flashmod.f90  fparc.f90  gencan.f  getinp.f90  gparc.f90  gwalls.f90  header  heuristics.f90  initial.f90  input.f90  output.f90  packmol  packmol.f90  pgencan.f90  polartocart.f90  random.f90  resetboxes.f90  restmol.f90  setibox.f90  setsizes.f90  sizes.f90  strlength.f90  swaptype.f90  swaptypemod.f90  title.f90  tobar.f90  usegencan.f90  (+1 more)
contrib/self_consist/: outcar_to_xyzf.py  submit_self_consist.sh
contrib/subtract_forces/: break_apart_xyz.py  subtract_forces.py  subtract_forces.sh
contrib/vasp/: vasp2xyzf.py
contrib/xchimes/: 2bonly_fit_demo.ipynb  3bonly_fit_demo.ipynb  README.md  chimes_da_c_2b.npz  chimes_da_c_3b.npz
doc/: Force_Match_User_Guide.docx  Force_Match_User_Guide_063016.docx  ~$rce_Match_User_Guide.docx
doc/source/: chimes_overview.rst  citing.rst  conf.py  contributing.rst  getting_started.rst  index.rst  legal.rst  lsq_input_file.rst  quick_start.rst  quick_start_chimes_md.rst  units.rst
example/: Makefile  README.txt
example/gather-force/: Makefile  water.xyzf  water_small.1.out  water_small.10.out  water_small.11.out  water_small.12.out  water_small.13.out  water_small.14.out  water_small.15.out  water_small.16.out  water_small.17.out  water_small.18.out  water_small.19.out  water_small.2.out  water_small.20.out  water_small.21.out  water_small.22.out  water_small.23.out  water_small.24.out  water_small.25.out  water_small.26.out  water_small.27.out  water_small.28.out  water_small.29.out  water_small.3.out  water_small.30.out  water_small.31.out  water_small.32.out  water_small.33.out  water_small.34.out  water_small.35.out  water_small.36.out  water_small.37.out  water_small.38.out  water_small.39.out  water_small.4.out  water_small.40.out  water_small.41.out  water_small.42.out  water_small.43.out  (+12 more)
example/h2o-3b/: Makefile  cheby_3b_force.in  cheby_3b_force2.in  cheby_ls_3b.in  cheby_ls_3b2.in  cheby_ls_3b3.in  cheby_ls_3b4.in  cheby_ls_3b5.in  cheby_md_3b.in  cheby_md_3b2.in  cheby_md_3b3.in  orig_3b_force.in  traj.gen  (+6 more)
modfiles/: JHU-ARCH.mod  LLNL-LC.mod  UM-ARC.mod  UT-TACC.mod
src/: A_Matrix.C  A_Matrix.h  Cheby.C  Cheby.h  ClassDefs.C  Cluster.C  Cluster.h  Ewald.C  Fcut.C  Fcut.h  Makefile  Makefile-TS-LSQ  Makefile-TS-MD  Makefile-TS-MD-Verif  Quad.C  Quad.h  chimes_lsq  chimes_lsq.C  chimes_lsq.py  chimes_md.C  compare-force.py  feexcept.C  functions.C  functions.h  input.C  input.h  io_styles.C  io_styles.h  lmppath.h  lsq-new-md-fmt.py  lsq.py  lsq2.py  lsq2_big.py  makeparam.C  maketags.pl  post_proc_chimes_lsq.py  post_proc_lsq2.py  splines_ls.C  splines_md.C  util.C  (+1 more)
test_suite/: run_test_suite.sh  splines_ls
test_suite-lsq/: break_up.sh  generate_test_suite.sh  house_lsq  readme  run_test_suite-new.sh  run_test_suite.sh
test_suite-md/: chimes_md  generate_test_suite.sh  house_md  run_test_suite-new.sh  run_test_suite.sh
(+3752 files in other folders)
